[gd_scene load_steps=2 format=3 uid="uid://b3tspjm8ky12o"]

[ext_resource type="Script" uid="uid://vet7sjc0chc1" path="res://scenes/TitleScreen.gd" id="1_qyuap"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qyuap")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101960786, 0.101960786, 0.24313726, 1)

[node name="AnimatedGradient" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.22376983, 0.8406308, 0, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.5
offset_top = -11.5
offset_right = 86.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5686275, 0, 0.9764706, 1)
theme_override_colors/font_outline_color = Color(0.98039216, 0.6156863, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 81
text = "Rhythm Webcam 2025"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressAnyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -66.5
offset_top = -123.0
offset_right = 66.5
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Press Any Button"
horizontal_alignment = 1
